syntax = "proto3";

package th.ac.bodin2.electives.proto.api;

option java_multiple_files = true;
option java_package = "th.ac.bodin2.electives.proto.api";

message AdminService {
  message ChallengeResponse {
    string challenge = 1;
  }

  message ListUsersResponse {
    repeated User users = 1;
    uint32 total_pages = 2;
  }

  message ListTeamsResponse {
    repeated Team teams = 1;
  }

  message ListElectivesResponse {
    repeated Elective electives = 1;
    // Elective -> Counts
    map<uint32, Counts> selected_counts = 2;

    message Counts {
      uint32 selected = 1;
      uint32 total = 2;
    }
  }

  message AddUserRequest {
    User user = 1;
    string password = 2;
  }

  message SetStudentSelectionsRequest {
    // Elective ID -> Subject ID
    map<uint32, uint32> selections = 1;
  }

  message UserPatch {
    optional string first_name = 1;
    optional string middle_name = 2;
    optional string last_name = 3;
    repeated Team teams = 4;
    optional string avatar_url = 5;
    optional string new_password = 6;

    // Whether the `teams` field should be considered during patching.
    bool patch_teams = 7;
    // Whether the `middle_name` field should be considered during patching.
    bool patch_middle_name = 8;
    // Whether the `avatar_url` field should be considered during patching.
    bool patch_avatar_url = 9;
  }

  message TeamPatch {
    optional string name = 1;
  }

  message ElectivePatch {
    optional string name = 1;
    /**
     * Unix timestamp representing the start date of the selection period.
     * If not set, the selection period should be treated as started.
     */
    optional uint64 start_date = 2;
    /**
     * Unix timestamp representing the end date of the selection period.
     * If not set, the selection period should be treated as indefinite.
     */
    optional uint64 end_date = 3;
    optional uint32 team_id = 4;

    // Whether the `start_date` field should be considered during patching.
    bool patch_start_date = 5;
    // Whether the `end_date` field should be considered during patching.
    bool patch_end_date = 6;
    // Whether the `team_id` field should be considered during patching.
    bool patch_team_id = 7;
  }

  message SubjectPatch {
    optional string name = 1;
    optional string description = 2;
    optional string code = 3;
    optional SubjectTag tag = 4;
    optional string location = 5;
    optional uint32 capacity = 6;
    optional uint32 team_id = 7;
    repeated User teachers = 8;
    optional string thumbnail_url = 9;
    optional string image_url = 10;

    // Whether the `teachers` field should be considered during patching.
    bool patch_teachers = 11;
  }
}

message AuthService {
  message AuthenticateRequest {
    uint32 id = 1;
    string password = 2;
    string client_name = 3;
  }

  message AuthenticateResponse {
    string token = 1;
  }
}

message ElectivesService {
  message ListResponse {
    repeated Elective electives = 1;
  }

  message ListSubjectsResponse {
    repeated Subject subjects = 1;
  }

  message ListSubjectMembersResponse {
    repeated User teachers = 1;
    repeated User students = 2;
  }
}

message UsersService {
  message StudentSelections {
    // Elective ID -> Subject
    map<uint32, Subject> subjects = 1;
  }

  message SetStudentElectiveSelectionRequest {
    uint32 subject_id = 1;
  }
}

message NotificationsService {
  message Envelope {
    optional uint64 message_id = 2;

    oneof payload {
      SubjectEnrollmentUpdateSubscriptionRequest subject_enrollment_update_subscription_request = 3;
      SubjectEnrollmentUpdate subject_enrollment_update = 4;
      BulkSubjectEnrollmentUpdate bulk_subject_enrollment_update = 5;
      Acknowledged acknowledged = 6;
      Identify identify = 7;
    }
  }

  // Server acknowledges the client message with the given `message_id`.
  message Acknowledged {}

  message Identify {
    string token = 1;
  }

  // Request to subscribe to updates for specific subjects
  message SubjectEnrollmentUpdateSubscriptionRequest {
    // Elective ID -> (subscription data)
    map<uint32, SubjectEnrollmentUpdateSubscription> subscriptions = 1;
  }

  message SubjectEnrollmentUpdateSubscription {
    /**
     * List of subject IDs to subscribe to for updates.
     *
     * The server may limit the number of subjects a client can subscribe to.
     */
    repeated uint32 subject_ids = 1;
  }

  // Sent immediately for important UI updates
  message SubjectEnrollmentUpdate {
    uint32 elective_id = 1;
    uint32 subject_id = 2;
    uint32 enrolled_count = 3;
  }

  // Sent every so often for non-important UI updates
  message BulkSubjectEnrollmentUpdate {
    uint32 elective_id = 1;
    map<uint32, uint32> subject_enrolled_counts = 2;
  }
}

message Team {
  uint32 id = 1;
  string name = 2;
}

message Elective {
  uint32 id = 1;
  string name = 2;
  /**
   * Unix timestamp representing the start date of the selection period.
   * If not set, the selection period should be treated as started.
   */
  optional uint64 start_date = 3;
  /**
   * Unix timestamp representing the end date of the selection period.
   * If not set, the selection period should be treated as indefinite.
   */
  optional uint64 end_date = 4;
  optional uint32 team_id = 5;
}

message Subject {
  uint32 id = 1;
  string name = 2;
  optional string description = 3;
  string code = 4;
  SubjectTag tag = 5;
  string location = 6;
  uint32 capacity = 7;
  optional uint32 team_id = 8;
  repeated User teachers = 9;
  // Only passed in ListSubjectsResponse
  optional uint32 enrolled_count = 10;
  optional string thumbnail_url = 11;
  optional string image_url = 12;
}

message User {
  uint32 id = 1;
  string first_name = 2;
  optional string middle_name = 3;
  string last_name = 4; 
  UserType type = 5;
  // Only passed for Students
  repeated Team teams = 7;
  optional string avatar_url = 8;
}

enum UserType {
  STUDENT = 0;
  TEACHER = 1;
}

enum SubjectTag {
  THAI = 0;
  MATH = 1;
  SCIENCE_AND_TECHNOLOGY = 2;
  SOCIAL_STUDIES = 3;
  ART = 4;
  PHYSICAL_EDUCATION = 5;
  // การงานอาชีพ
  CAREER = 6;
  FOREIGN_LANGUAGE = 7;
  GUIDANCE = 8;
  ENGLISH_PROGRAM = 9;
  // กิจกรรมพัฒนาผู้เรียน
  ACTIVITIES = 10;
}